--- a/src/android/assert/rayna-native-template/app/src/main/res/values/strings.xml
+++ b/src/android/assert/rayna-native-template/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">rayna-native</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">rayna-native-template</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
